--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
 		"svelte": "^5.0.0",
 		"tailwindcss": "^4.0.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"lucide-svelte": "^0.479.0"
 	}
 }
