--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"@eslint/js": "^9.18.0",
 		"@fontsource/fira-mono": "^5.0.0",
 		"@neoconfetti/svelte": "^2.0.0",
+		"@skeletonlabs/skeleton": "^3.0.0",
+		"@skeletonlabs/skeleton-svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.16.0",
@@ -34,6 +36,8 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
-		"lucide-svelte": "^0.479.0"
+		"firebase": "^11.4.0",
+		"lucide-svelte": "^0.479.0",
+		"svelte-achievements-bar": "^1.3.0"
 	}
 }
