--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/vite": "^4.0.0",
+		"@vite-pwa/sveltekit": "^0.6.7",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -36,6 +37,6 @@
 	"dependencies": {
 		"firebase": "^11.4.0",
 		"lucide-svelte": "^0.479.0",
-		"svelte-achievements-bar": "^1.3.0"
+		"svelte-achievements-bar": "^1.4.0"
 	}
 }
