--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
 	},
 	"dependencies": {
 		"firebase": "^11.4.0",
-		"lucide-svelte": "^0.479.0",
-		"svelte-achievements-bar": "^1.4.0"
+		"lucide-svelte": "^0.479.0"
 	}
 }
